# halo2

./: .gitignore  COPYING.md  Cargo.toml  LICENSE-MIT  README.md  rust-toolchain
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: eli15.md
.github/workflows/: ci.yml  docs-ghpages.yml  lints-beta.yml  lints-stable.yml  trigger_proverbench_dispatch.yml
book/: Makefile  book.toml  edithtml.sh  macros.txt
book/src/: IDENTIFIERS.json  README.md  SUMMARY.md  background.md  concepts.md  design.md  user.md
book/src/background/: curves.md  fields.md  groups.md  pc-ipa.md  plonkish.md  polynomials.md  recursion.md
book/src/concepts/: arithmetization.md  chips.md  gadgets.md  proofs.md
book/src/design/: gadgets.md  protocol.md  proving-system.md
book/src/design/gadgets/: decomposition.md  ecc.md  sha256.md  sinsemilla.md
book/src/design/gadgets/ecc/: addition.md  fixed-base-scalar-mul.md  var-base-scalar-mul.md  witnessing-points.md
book/src/design/gadgets/sha256/: table16.md
book/src/design/gadgets/sinsemilla/: merkle-crh.md
book/src/design/implementation/: fields.md  proofs.md  selector-combining.md
book/src/design/proving-system/: circuit-commitments.md  comparison.md  inner-product.md  lookup.md  multipoint-opening.md  permutation.md  vanishing.md
book/src/user/: dev-tools.md  experimental-features.md  gadgets.md  lookup-tables.md  simple-example.md  tips-and-tricks.md
ec-gpu-gen/: Cargo.toml
ec-gpu-gen/src/: arithmetic.rs  fft.rs  lib.rs  multiexp_cpu.rs  source.rs
halo2/: CHANGELOG.md  Cargo.toml
halo2/src/: lib.rs
halo2_gadgets/: CHANGELOG.md  Cargo.toml  README.md
halo2_gadgets/benches/: poseidon.rs  primitives.rs  sha256.rs
halo2_gadgets/proptest-regressions/constants/: util.txt
halo2_gadgets/src/: lib.rs  poseidon.rs  utilities.rs
halo2_gadgets/src/poseidon/: pow5.rs  primitives.rs
halo2_gadgets/src/poseidon/primitives/: fp.rs  fq.rs  grain.rs  mds.rs  p128pow5t3.rs  test_vectors.rs
halo2_proofs/: CHANGELOG.md  Cargo.toml  README.md  build.rs  cpu_fft_times.csv
halo2_proofs/benches/: arithmetic.rs  commit_zk.rs  dev_lookup.rs  fft.rs  hashtocurve.rs  lookups.rs  plonk.rs
halo2_proofs/examples/: circuit-layout.rs  proof-size.rs  serialization.rs  shuffle.rs  shuffle_api.rs  simple-example.rs  simple-example_kzg.rs  simple-lookup-unblinded.rs  simple-lookup.rs  standard-plonk.rs  two-chip.rs  vector-mul-unblinded.rs  vector-mul.rs  vector-ops-unblinded.rs
halo2_proofs/proptest-regressions/plonk/: assigned.txt
halo2_proofs/proptest-regressions/plonk/circuit/: compress_selectors.txt
halo2_proofs/src/: arithmetic.rs  circuit.rs  dev.rs  helpers.rs  icicle.rs  lib.rs  multicore.rs  plonk.rs  poly.rs  transcript.rs
halo2_proofs/src/circuit/: floor_planner.rs  layouter.rs  table_layouter.rs  value.rs
halo2_proofs/src/circuit/floor_planner/: single_pass.rs  v1.rs
halo2_proofs/src/circuit/floor_planner/v1/: strategy.rs
halo2_proofs/src/dev/: cost.rs  cost_model.rs  failure.rs  gates.rs  graph.rs  metadata.rs  tfp.rs  util.rs
halo2_proofs/src/dev/failure/: emitter.rs
halo2_proofs/src/dev/graph/: layout.rs
halo2_proofs/src/gpu/: COPYRIGHT  error.rs  fft.rs  locks.rs  mod.rs  multiexp.rs  nogpu.rs  sources.rs  utils.rs
halo2_proofs/src/gpu(old)/: nogpu.rs  sources.rs
halo2_proofs/src/plonk/: assigned.rs  circuit.rs  error.rs  evaluation.rs  keygen.rs  lookup.rs  mv_lookup.rs  permutation.rs  prover.rs  shuffle.rs  vanishing.rs  verifier.rs
halo2_proofs/src/plonk/circuit/: compress_selectors.rs
halo2_proofs/src/plonk/lookup/: prover.rs  verifier.rs
halo2_proofs/src/plonk/mv_lookup/: prover.rs  verifier.rs
halo2_proofs/src/plonk/permutation/: keygen.rs  prover.rs  verifier.rs
halo2_proofs/src/plonk/shuffle/: prover.rs  verifier.rs
halo2_proofs/src/plonk/vanishing/: prover.rs  verifier.rs
halo2_proofs/src/plonk/verifier/: batch.rs
halo2_proofs/src/poly/: commitment.rs  domain.rs  multiopen_test.rs  query.rs  strategy.rs
halo2_proofs/src/poly/ipa/: commitment.rs  mod.rs  msm.rs  multiopen.rs  strategy.rs
halo2_proofs/src/poly/ipa/commitment/: prover.rs  verifier.rs
halo2_proofs/src/poly/ipa/multiopen/: prover.rs  verifier.rs
halo2_proofs/src/poly/kzg/: commitment.rs  mod.rs  msm.rs  multiopen.rs  strategy.rs
halo2_proofs/src/poly/kzg/multiopen/: gwc.rs  shplonk.rs
halo2_proofs/src/poly/kzg/multiopen/gwc/: prover.rs  verifier.rs
halo2_proofs/src/poly/kzg/multiopen/shplonk/: prover.rs  verifier.rs
halo2_proofs/tests/: plonk_api.rs
sha256test/: Cargo.toml
sha256test/src/: main.rs
sha256test/src/inputs/: sha256exp.rs
