[package]
name = "halo2_proofs"
version = "0.2.0"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Ying Tong Lai <yingtong@electriccoin.co>",
    "Daira Hopwood <daira@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
]
edition = "2021"
rust-version = "1.56.1"
description = """
Fast PLONK-based zero-knowledge proving system with no trusted setup
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/zcash/halo2"
documentation = "https://docs.rs/halo2_proofs"
readme = "README.md"
categories = ["cryptography"]
keywords = ["halo", "proofs", "zkp", "zkSNARKs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "commit_zk"
harness = false

[[bench]]
name = "hashtocurve"
harness = false

[[bench]]
name = "plonk"
harness = false

[[bench]]
name = "dev_lookup"
harness = false

[[bench]]
name = "fft"
harness = false

[dependencies]
temp-env = "0.3.0"
ec-gpu-gen = {path = "../ec-gpu-gen", version = "0.7.0"}
#ec-gpu = {path = "../ec-gpu", version = "0.2.0"}
#ec-gpu-gen = {version = "0.7.0"}
ec-gpu = {version = "0.2.0"}
blstrs = { version = "0.7.0", features = ["__private_bench"] }

backtrace = { version = "0.3", optional = true }
rayon = "1.5.1"
ff = "0.13"
group = "0.13"
halo2curves = { git = 'https://github.com/privacy-scaling-explorations/halo2curves', tag = "0.3.2" }
rand_core = { version = "0.6", default-features = false }
tracing = "0.1"
blake2b_simd = "1"
sha3 = "0.9.1"
rand_chacha = "0.3"

log = "0.4.8"
thiserror = "1.0.10"
crossbeam-channel = "0.5.0"
crossbeam = {version = "0.7", optional = true}
lazy_static = {version = "1", optional = true}
futures = {package = "futures", version = "0.3", default_features = false, features = ["executor"]}
num_cpus = "1"
env_logger = "0.8.1"
ark-std = { version = "0.3", features = ["print-trace"] }
test-log="*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
instant = {version = "0.1", features = [ "wasm-bindgen" ], optional = true}
csv = "1.1"
# gpu feature

pairing = { git = 'https://github.com/starslabhq/pairing', package = "pairing_bn256", branch = "primeFieldChar" }

rust-gpu-tools = { version = "0.7.0", default-features = false, optional = true }

#rust-gpu-tools = { version = "0.3.0", optional = true }
ff-cl-gen = { git = 'https://github.com/starslabhq/ff-cl-gen', optional = true,  branch = "gpuFft" }
#ff-cl-gen = { path = '../../ff-cl-gen', optional = true}

fs2 = { version = "0.4.3", optional = true }

# Developer tooling dependencies
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.3"
gumdrop = "0.8"
proptest = "1"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
env_logger = "*"
tracing = {version = "0.1", default-features = false}
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}
#config = "0.13.1"


[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["batch","opencl"]
cuda = ["ec-gpu-gen/cuda", "fs2","blstrs/gpu"]
opencl = ["ec-gpu-gen/opencl", "fs2","blstrs/gpu"]
dev-graph = ["plotters", "tabbycat"]
gadget-traces = ["backtrace"]
sanity-checks = []
batch = ["rand_core/getrandom"]
circuit-params = []
# set gpu acceleration as optional feature
gpu = ["rust-gpu-tools", "ff-cl-gen", "fs2", "lazy_static", "crossbeam", "futures/thread-pool"]
gwc = []
cpu=[]

[lib]
bench = false

[[example]]
name = "circuit-layout"
required-features = ["dev-graph"]

#[build-dependencies]
#ec-gpu-gen = { version = "0.7.0" }
[build-dependencies]
#ec-gpu-gen = {version = "0.7.0"}
ec-gpu-gen = { path = "../ec-gpu-gen", version = "0.7.0" }
rustversion = "1.0.6"
blstrs = { version = "0.7.0", features = ["__private_bench"] }
#ec-gpu-gen = { version = "0.7.0" }
#rustversion = "1.0.6"