[package]
name = "halo2_proofs"
version = "0.2.0"
authors = [
    "Sean Bowe <sean@electriccoin.co>",
    "Ying Tong Lai <yingtong@electriccoin.co>",
    "Daira Hopwood <daira@electriccoin.co>",
    "Jack Grigg <jack@electriccoin.co>",
]
edition = "2021"
rust-version = "1.56.1"
description = """
Fast PLONK-based zero-knowledge proving system with no trusted setup
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/zcash/halo2"
documentation = "https://docs.rs/halo2_proofs"
readme = "README.md"
categories = ["cryptography"]
keywords = ["halo", "proofs", "zkp", "zkSNARKs"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "commit_zk"
harness = false

[[bench]]
name = "hashtocurve"
harness = false

[[bench]]
name = "plonk"
harness = false

[[bench]]
name = "dev_lookup"
harness = false

[[bench]]
name = "fft"
harness = false

[dependencies]
backtrace = { version = "0.3", optional = true }
rayon = "1.5.1"
ff = "0.13"
group = "0.13"

halo2curves = { path ="../../halo2curves", version = "0.1.0" }
ec-gpu-gen ={ path = "../../ec-gpu/ec-gpu-gen",optional = true}
ec-gpu ={ path = "../../ec-gpu/ec-gpu",optional = true}

thiserror = "1.0.10"

rand_core = { version = "0.6", default-features = false }
tracing = "0.1"
blake2b_simd = "1"
sha3 = "0.9.1"
rand_chacha = "0.3"

fs2 = { version = "0.4.3", optional = true }
log = "0.4.8"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
chrono = "0.4.31"

# Developer tooling dependencies
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }

[dev-dependencies]
assert_matches = "1.5"
criterion = "0.3"
gumdrop = "0.8"
proptest = "1"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
temp-env = "0.3.0"
rand = "0.8"
rand_pcg = "0.3.1"

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }



[features]
#default = ["batch", "logging"]
default = ["batch", "logging","opencl"]

dev-graph = ["plotters", "tabbycat"]
gadget-traces = ["backtrace"]
thread-safe-region = []
sanity-checks = []
batch = ["rand_core/getrandom"]
circuit-params = []
cuda=["ec-gpu-gen","ec-gpu", "fs2"]
opencl=["ec-gpu-gen","ec-gpu", "fs2"]
logging=["ec-gpu-gen","ec-gpu", "fs2"]

[lib]
bench = false

[[example]]
name = "circuit-layout"
required-features = ["dev-graph"]


